# AMR_Fleet_Core

./: README.md  turtlebot3_IDE.cpp
backend/: amr_turtle_db_bakcup.sql
motion_control/: README.md
motion_control/actuator/: actuator.ino
motion_control/conveyor belt/: conveyor_belt.ino
qt_app/AFC_qt/: CMakeLists.txt  package.xml
qt_app/AFC_qt/.qtcreator/: CMakeLists.txt.user.0082e3a  CMakeLists.txt.user.14cf45f  CMakeLists.txt.user.1da4fe8
qt_app/AFC_qt/src/: main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  navi.cpp  navi.h  pathfinding.cpp  pathfinding.h  rosnode.cpp  rosnode.h  simulation.cpp  simulation.h  tab1.cpp  tab1.h  tab1.ui  tab2.cpp  tab2.h  tab2.ui
servo/: README.md  turtlebot3_core.ino  turtlebot3_rpi4.cpp
